--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.4.2"
   },
   "scripts": {
-    "start": ""
+    "webpack": "webpack --mode development"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
